--- a/style.css
+++ b/style.css
@@ -1,27 +1,63 @@
 /* Add a black background color to the top navigation */
-
 .topnav {
     background-color: #e8f7fa;
     overflow: hidden;
+    float:left
   }
 
 /* Style the links inside the navigation bar */
-  .topnav a {
-    float: left;
-    color: #333;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
-  }
+.buttons {
+  margin-top:90px;
+  font-size: 30px;
+  color: rgba(0, 0, 0, 0.733);
+  display:inline-block;
+  text-align: center;
+  padding: 5px 30px;
+}
+
+#badge {
+}
+
 /* Change the color of links on hover */
 .topnav a:hover {
-    background-color: #ddd;
-    color: black;
+  background-color: rgba(93, 142, 182, 0.575);
+  color: rgba(0, 0, 0, 0.747);
+  border: 2px solid currentColor;
+  border-radius: 3rem;
+  text-decoration: underline;
+}
+
+/* Add a color to the active/current link */
+.topnav a.active {
+    background-color: #9bebe9;
+    color: white;
   }
 
+.bottom-nav {
+  background-color: #e8f7fa;
+  overflow: hidden;
+}
+
+/* Style the links inside the navigation bar */
+.bottom-nav a {
+  float: left;
+  color: #333;
+  text-align: center;
+  padding: 13px 30px;
+  font-size: 30px;
+  display: inline-block;
+}
+
+/* Change the color of links on hover */
+.bottom-nav a:hover {
+  background-color: rgba(93, 142, 182, 0.575);
+  color: rgb(0, 0, 0);
+  border: 2px solid currentColor;
+  border-radius: 3rem;
+}
+
   /* Add a color to the active/current link */
-.topnav a.active {
+.bottom-nav a.active {
     background-color: #9bebe9;
     color: white;
   }
@@ -30,6 +66,48 @@
     background-image: url("img/TopClean.JPG");
     background-color: #e8f7fa;
 }
+
+html,body{
+  margin:0;
+  height:100%;
+}
 #element-pic {
-    float: left;
+  width:100%; 
+  height:100%;
+  display:block;
+  object-fit: cover;
+}
+/*-------------------------------------MOBILE VERSION----------------------*/
+
+/*Icon badge*/
+#mobile-badge {
+  display:none;
+  float: left;
+}
+
+/*Navigation bar buttons - mobile*/
+.mobile-buttons {
+  padding: 3px 10px;
+  font-size: 10px;
+  color: rgba(0, 0, 0, 0.733);
+  display:none;
+}
+
+.mobile-topnav {
+  display:none;
+}
+
+.mobile-div {
+  display:none;
+}
+
+
+/* bottom navigation footer - mobile*/
+.mobile-bottom-nav a {
+  float: left;
+  color: #333;
+  text-align: center;
+  padding: 13px 10px;
+  font-size: 10px;
+  display:none;
 }
