--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
 /* Style the links inside the navigation bar */
 .buttons {
   font-size: 30px;
+  font-weight: 400;
   color: rgba(0, 0, 0, 0.733);
   display:inline-block;
   text-align: center;
