--- a/style.css
+++ b/style.css
@@ -25,10 +25,11 @@
 /* Change the color of links on hover */
 .topnav a:hover {
   background-color: rgba(93, 142, 182, 0.575);
-  color: rgba(0, 0, 0, 0.747);
+  color: rgba(255, 255, 255, 0.747);
   border: 2px solid currentColor;
   border-radius: 3rem;
   text-decoration: underline;
+  font-style: italic;
 }
 
 /* Add a color to the active/current link */
@@ -76,12 +77,29 @@ html,body{
   margin:0;
   height:100%;
 }
-#element-pic {
+.element-pic {
   width:100%; 
   height:100%;
   display:block;
   object-fit: cover;
 }
+/*----Services page----*/
+#services-page {
+  display: none;
+}
+.services-text {
+  position: absolute;
+  top: 60%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: rgb(0, 0, 0);
+  text-shadow: 2px 2px 5px rgb(255, 255, 255);
+  font-family: sans-serif;
+  font-size: 30px;
+  font-weight: bold;
+  font-style: italic;
+}
+
 /*-------------------------------------MOBILE VERSION----------------------*/
 
 /*Icon badge*/
