--- a/styles.css
+++ b/styles.css
@@ -100,6 +100,40 @@ html,body{
   font-style: italic;
 }
 
+/*----Contacts page----*/
+#contact-page {
+  display: none;
+}
+.contact-text {
+  position: absolute;
+  top: 60%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: rgb(0, 0, 0);
+  text-shadow: 2px 2px 5px rgb(255, 255, 255);
+  font-family: sans-serif;
+  font-size: 30px;
+  font-weight: bold;
+  font-style: italic;
+}
+
+/*----About Us page----*/
+#about-page {
+  display: none;
+}
+.about-text {
+  position: absolute;
+  top: 60%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: rgb(0, 0, 0);
+  text-shadow: 2px 2px 5px rgb(255, 255, 255);
+  font-family: sans-serif;
+  font-size: 30px;
+  font-weight: bold;
+  font-style: italic;
+}
+
 /*-------------------------------------MOBILE VERSION----------------------*/
 
 /*Icon badge*/
