--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-.desktop-version {
+.mobile-version {
   display: none;
 }
 
@@ -98,7 +98,7 @@
   font-size: 50px;
   font-weight: bold;
   border: 12px;
-  border-style: solid;
+  border-style: ridge;
   border-color: #9bebe9;
   padding: 1em;
 }
@@ -131,7 +131,7 @@ body {
   font-weight: bold;
   font-style: italic;
   border: 12px;
-  border-style: solid;
+  border-style: ridge;
   border-color: #9bebe9;
   padding: 1em;
 }
@@ -152,7 +152,7 @@ body {
   font-weight: bold;
   font-style: italic;
   border: 12px;
-  border-style: solid;
+  border-style: ridge;
   border-color: #9bebe9;
   padding: 1em;
 }
@@ -173,7 +173,7 @@ body {
   font-weight: bold;
   font-style: italic;
   border: 12px;
-  border-style: solid;
+  border-style: ridge;
   border-color: #9bebe9;
   padding: 1em;
 }
@@ -280,7 +280,7 @@ body {
   font-size: 40px;
   font-weight: bold;
   border: 10px;
-  border-style: solid;
+  border-style: ridge;
   border-color: #9bebe9;
   padding: 1em;
 }
@@ -314,7 +314,7 @@ body {
   font-weight: bold;
   font-style: italic;
   border: 12px;
-  border-style: solid;
+  border-style: ridge;
   border-color: #9bebe9;
   padding: 1em;
 }
@@ -333,7 +333,7 @@ body {
   font-weight: bold;
   font-style: italic;
   border: 12px;
-  border-style: solid;
+  border-style: ridge;
   border-color: #9bebe9;
   padding: 1em;
 }
@@ -352,7 +352,7 @@ body {
   font-weight: bold;
   font-style: italic;
   border: 12px;
-  border-style: solid;
+  border-style: ridge;
   border-color: #9bebe9;
   padding: 1em;
 }
