--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,4 @@
-.desktop-version {
-  display: none;
-}
+
 
 
 /* --top navigation bar-- */
@@ -179,207 +177,8 @@ body {
   padding: 1em;
 }
 
-/*-------------------------------------MOBILE VERSION----------------------*/
-
-
-/* --top navigation bar-- */
-
-/* Add a black background color to the top navigation */
-.mobile-topnav {
-  background-color: #e8f7fa;
-  overflow: hidden;
-  float: left;
+@media only screen and (max-width: 600px) {
+  body {
+    background-color: black;
+  }
 }
-
-/* Style the links inside the top navigation bar */
-.mobile-buttons {
-  font-family: sans-serif;
-  font-size: 10px;
-  font-weight: bold;
-  -webkit-text-stroke: 1px black;
-  color: rgba(255, 255, 255, 0.733);
-  display: inline-block;
-  text-align: center;
-  padding: 3px 10px;
-  text-decoration: none;
-}
-
-
-
-/* Style the link icon inside the top navigation bar */
-#mobile-badge:hover {
-  border: 2px solid currentColor;
-  border-radius: 3rem;
-  cursor: pointer;
-}
-
-/* Change the color of links on hover */
-.mobile-topnav a:hover {
-  background-color: rgba(93, 142, 182, 0.575);
-  color: rgba(255, 255, 255, 0.747);
-  border: 2px solid currentColor;
-  border-radius: 3rem;
-  text-decoration: underline;
-  font-style: italic;
-}
-
-/* Add a color to the active/current link */
-.mobile-topnav a.active {
-  background-color: #9bebe9;
-  color: white;
-}
-
-/* --bottom navigation bar-- */
-
-/* Style the bottom navigation bar - mobile */
-.mobile-bottom-nav {
-  background-color: #e8f7fa;
-  overflow: hidden;
-}
-
-/* Style the links inside the bottom navigation bar - mobile  */
-.mobile-bottom-nav a {
-  float: left;
-  color: #333;
-  text-align: center;
-  padding: 13px 10px;
-  font-size: 10px;
-  display: inline-block;
-  text-decoration: none;
-}
-
-/* Change the color of links on hover - mobile */
-.mobile-bottom-nav a:hover {
-  background-color: rgba(93, 142, 182, 0.575);
-  color: rgb(0, 0, 0);
-  border: 2px solid currentColor;
-  border-radius: 3rem;
-}
-
-/* Add a color to the active/current link - mobile  */
-.mobile-bottom-nav a.active {
-  background-color: #9bebe9;
-  color: white;
-}
-
-
-/* --Main/Home Page--  - mobile  */
-
-#mobile-main {
-  /*background-image: url("img/TopClean.JPG");*/
-  background-color: #e8f7fa;
-}
-/*bottom text on main page - mobile */
-.mobile-bottom-text {
-  position: absolute;
-  bottom:650px;
-  right: 50px;
-  color: rgb(0, 0, 0);
-  text-shadow: 2px 2px 5px rgb(255, 255, 255);
-  font-family: sans-serif;
-  font-size: 10px;
-  font-weight: bold;
-  border: 5px;
-  border-style: ridge;
-  border-color: #9bebe9;
-  padding: 1em;
-}
-
-
-
-
-
-html,
-body {
-  margin: 0;
-  height: 100%;
-  /*overflow-y:hidden;*/
-}
-.mobile-element-pic {
-  width: 100%;
-  height: 100%;
-  display: block;
-  object-fit: cover;
-}
-/*----Services page---- - mobile */
-
-#mobile-services-page {
-  display: none;
-}
-
-.mobile-services-text {
-  position: absolute;
-  top: 20%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  color: rgb(0, 0, 0);
-  text-shadow: 2px 2px 5px rgb(255, 255, 255);
-  font-family: sans-serif;
-  font-size: 6px;
-  font-weight: bold;
-  font-style: italic;
-  border: 5px;
-  border-style: ridge;
-  border-color: #9bebe9;
-  padding: 1em;
-}
-
-/*----Contacts page---- - mobile */
-
-#mobile-contact-page {
-  display: none;
-}
-.mobile-contact-text {
-  position: absolute;
-  top: 20%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  color: rgb(0, 0, 0);
-  text-shadow: 2px 2px 5px rgb(255, 255, 255);
-  font-family: sans-serif;
-  font-size: 10px;
-  font-weight: bold;
-  font-style: italic;
-  border: 6px;
-  border-style: ridge;
-  border-color: #9bebe9;
-  padding: 1em;
-}
-
-/*----About Us page---- - mobile */
-
-#mobile-about-page {
-  display: none;
-}
-
-.mobile-about-text {
-  position: absolute;
-  top: 20%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  color: rgb(0, 0, 0);
-  text-shadow: 2px 2px 5px rgb(255, 255, 255);
-  font-family: sans-serif;
-  font-size: 7px;
-  font-weight: bold;
-  font-style: italic;
-  border: 8px;
-  border-style: ridge;
-  border-color: #9bebe9;
-  padding: 0.4em;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
