link for emailing and phone calling
-main text on Home page refactored from <p> to <h1>

-in "Kontakt" page email link and phone number link added

--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@
 
 /* --top navigation bar-- */
 
-/* Add a black background color to the top navigation */
+/* Add a background color to the top navigation */
 .topnav {
   background-color: #e8f7fa;
   overflow: hidden;
