--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,13 @@
-@import url('https://fonts.googleapis.com/css2?family=Explora&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Explora&family=Permanent+Marker&display=swap');
+@import 'https://use.fontawesome.com/releases/v6.2.1/css/all.css';
+html,
+body {
+  height: 100%;
+  width: 100%;
+}
 
+/* frame for every element for testing purposes */
+/* * { border: 1px solid red; } */
 
 /* --top navigation bar-- */
 
@@ -8,6 +16,12 @@
   background-color: #e8f7fa;
   overflow: hidden;
   float: left;
+}
+
+/* make li next to eachother in the top navigation */
+.topnav ul {
+  display: flex;
+  justify-content: space-between;
 }
 
 /* Style the links inside the top navigation bar */
@@ -82,38 +96,32 @@
 /* --Main/Home Page-- */
 
 #main {
-  /* background-image: url("img/TopClean.JPG");*/
+  background-image: url("img/TopClean.JPG");
   background-color: #e8f7fa;
 }
 /*bottom text on main page*/
 .bottom-text {
   position: absolute;
-  bottom: 150px;
+  bottom: 250px;
   right: 200px;
-  color: rgb(0, 0, 0);
-  text-shadow: 2px 2px 5px rgb(255, 255, 255);
-  font-family: sans-serif;
+  color: rgb(7, 9, 122);
+  text-shadow: 4px 4px 5px rgb(255, 255, 255);
   font-size: 19px;
   font-weight: bold;
-  border: 12px;
+  /* border: 12px;
   border-style: ridge;
-  border-color: #9bebe9;
+  border-color: #9bebe9; */
+  outline: 4px dotted rgb(7, 9, 122);
   padding: 1em;
-  font-family: 'Explora', cursive;
-}
+  font-family: 'Permanent Marker', cursive;}
 
-html,
-body {
-  margin: 0;
-  height: 100%;
-  /*overflow-y: auto;*/
-}
-.element-pic {
+
+/* .element-pic {
   width: 100%;
   height: 100%;
   display: block;
   object-fit: cover;
-}
+} */
 /*----Services page----*/
 #services-page {
   display: none;
@@ -126,11 +134,10 @@ body {
   transform: translate(-50%, -50%);
   color: rgb(0, 0, 0);
   text-shadow: 2px 2px 5px rgb(255, 255, 255);
-  font-family: 'Explora', cursive;
+  font-family: 'Permanent Marker', cursive;
   /*font-family: sans-serif;*/
   font-size: 25px;
-  font-weight: bold;
-  font-style: italic;
+  font-weight: 400;
   border: 12px;
   border-style: ridge;
   border-color: #9bebe9;
@@ -170,7 +177,7 @@ body {
   color: rgb(0, 0, 0);
   text-shadow: 2px 2px 5px rgb(255, 255, 255);
   font-family: sans-serif;
-  font-size: 30px;
+  font-size: 18px;
   font-weight: bold;
   font-style: italic;
   border: 12px;
