--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Explora&family=Permanent+Marker&display=swap');
 @import 'https://use.fontawesome.com/releases/v6.2.1/css/all.css';
-html,
+/* html,
 body {
-  height: 100%;
-  width: 100%;
-}
+  height: 1080px;
+  width: 1980px;
+} */
+
 
 /* frame for every element for testing purposes */
 /* * { border: 1px solid red; } */
@@ -60,7 +61,7 @@ body {
   color: white;
 }
 
-/* --bottom navigation bar-- */
+/* --bottom navigation bar-------------- */
 
 /* Style the bottom navigation bar */
 .bottom-nav {
@@ -71,7 +72,7 @@ body {
 /* Style the links inside the bottom navigation bar */
 .bottom-nav a {
   float: left;
-  color: #333;
+  color: rgba(255, 255, 255, 0.733);
   text-align: center;
   padding: 13px 30px;
   font-size: 25px;
@@ -82,7 +83,6 @@ body {
 /* Change the color of links on hover */
 .bottom-nav a:hover {
   background-color: rgba(93, 142, 182, 0.575);
-  color: rgb(0, 0, 0);
   border: 2px solid currentColor;
   border-radius: 3rem;
 }
@@ -91,6 +91,12 @@ body {
 .bottom-nav a.active {
   background-color: #9bebe9;
   color: white;
+}
+
+#copyright {
+  display: inline-block;
+  padding-top: 20px;
+  padding-left: 50px;
 }
 
 /* --Main/Home Page-- */
@@ -107,13 +113,14 @@ body {
   color: rgb(7, 9, 122);
   text-shadow: 4px 4px 5px rgb(255, 255, 255);
   font-size: 19px;
+  font-family: 'Permanent Marker', cursive;
   font-weight: bold;
   /* border: 12px;
   border-style: ridge;
   border-color: #9bebe9; */
   outline: 4px dotted rgb(7, 9, 122);
   padding: 1em;
-  font-family: 'Permanent Marker', cursive;}
+}
 
 
 /* .element-pic {
@@ -186,8 +193,65 @@ body {
   padding: 1em;
 }
 
+
+/* ----------------------phone version-------------------------- */
 @media only screen and (max-width: 600px) {
   body {
     background-color: black;
+  }
+
+  .bottom-text {
+    position: absolute;
+    bottom: 550px;
+    right: 100px;
+    color: rgb(7, 9, 122);
+    text-shadow: 4px 4px 5px rgb(255, 255, 255);
+    font-size: 9px;
+    font-family: 'Permanent Marker', cursive;
+    font-weight: bold;
+    /* border: 12px;
+    border-style: ridge;
+    border-color: #9bebe9; */
+    outline: 4px dotted rgb(7, 9, 122);
+    padding: 1em;
+  }
+
+  .services-text {
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: rgb(0, 0, 0);
+    text-shadow: 2px 2px 5px rgb(255, 255, 255);
+    font-family: 'Permanent Marker', cursive;
+    /*font-family: sans-serif;*/
+    font-size: 15px;
+    font-weight: 400;
+  }
+
+  .contact-text {
+    position: absolute;
+    top: 30%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: rgb(0, 0, 0);
+    text-shadow: 2px 2px 5px rgb(255, 255, 255);
+    font-family: sans-serif;
+    font-size: 20px;
+    font-weight: bold;
+    font-style: italic;
+  }
+
+  .about-text {
+    position: absolute;
+    top: 30%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: rgb(0, 0, 0);
+    text-shadow: 2px 2px 5px rgb(255, 255, 255);
+    font-family: sans-serif;
+    font-size: 12px;
+    font-weight: bold;
+    font-style: italic;
   }
 }
