--- a/style.css
+++ b/style.css
@@ -126,10 +126,6 @@ body {
 
 /* --Main/Home Page-- */
 
-#main {
-  background-image: url("img/topclean 1980x1080 done background.jpg");
-  background-color: #e8f7fa;
-}
 /*bottom text on main page*/
 .bottom-text {
   position: absolute;
@@ -148,12 +144,6 @@ body {
 }
 
 
-/* .element-pic {
-  width: 100%;
-  height: 100%;
-  display: block;
-  object-fit: cover;
-} */
 /*----Services page----*/
 #services-page {
   display: none;
@@ -162,7 +152,7 @@ body {
 
 .services-text {
   position: absolute;
-  top: 60%;
+  top: 38%;
   left: 50%;
   transform: translate(-50%, -50%);
   color: rgb(0, 0, 0);
@@ -183,7 +173,7 @@ body {
 }
 .contact-text {
   position: absolute;
-  top: 60%;
+  top: 38%;
   left: 50%;
   transform: translate(-50%, -50%);
   color: rgb(0, 0, 0);
@@ -204,13 +194,13 @@ body {
 }
 .about-text {
   position: absolute;
-  top: 60%;
+  top: 38%;
   left: 50%;
   transform: translate(-50%, -50%);
   color: rgb(0, 0, 0);
   text-shadow: 2px 2px 5px rgb(255, 255, 255);
   font-family: sans-serif;
-  font-size: 30px;
+  font-size: 22px;
   font-weight: bold;
   font-style: italic;
   border: 12px ridge rgba(255, 255, 255, 0.3);
@@ -227,11 +217,11 @@ body {
   
     .bottom-text {
       position: absolute;
-      top: 300px;
+      top: 380px;
       left: 0px;
       color: rgb(7, 9, 122);
       text-shadow: 4px 4px 5px rgb(255, 255, 255);
-      font-size: 9px;
+      font-size: 12px;
       font-family: 'Permanent Marker', cursive;
       font-weight: bold;
       /* border: 12px;
@@ -243,39 +233,39 @@ body {
   
     .services-text {
       position: absolute;
-      top: 25%;
+      top: 38%;
       left: 50%;
       transform: translate(-50%, -50%);
       color: rgb(0, 0, 0);
       text-shadow: 2px 2px 5px rgb(255, 255, 255);
       font-family: 'Permanent Marker', cursive;
       /*font-family: sans-serif;*/
-      font-size: 15px;
+      font-size: 22px;
       font-weight: 400;
     }
   
     .contact-text {
       position: absolute;
-      top: 26%;
+      top: 38%;
       left: 50%;
       transform: translate(-50%, -50%);
       color: rgb(0, 0, 0);
       text-shadow: 2px 2px 5px rgb(255, 255, 255);
       font-family: sans-serif;
-      font-size: 20px;
+      font-size: 22px;
       font-weight: bold;
       font-style: italic;
     }
   
     .about-text {
       position: absolute;
-      top: 26%;
+      top: 38%;
       left: 50%;
       transform: translate(-50%, -50%);
       color: rgb(0, 0, 0);
       text-shadow: 2px 2px 5px rgb(255, 255, 255);
       font-family: sans-serif;
-      font-size: 12px;
+      font-size: 16px;
       font-weight: bold;
       font-style: italic;
     }
@@ -286,7 +276,20 @@ body {
 
   @media only screen and (max-width: 600px) {
     body {
-      background-color: black;
+      background-color: rgb(255, 203, 203);
+    }
+
+    .bottom-nav{
+      display: none;
+    }
+
+    .buttons {
+      font-family: sans-serif;
+      font-size: 15px;
+      font-weight: bold;
+      color: rgb(255, 255, 255);
+      padding: 5px 15px;
+      text-shadow: 2px 2px 5px rgb(0, 0, 0);
     }
   
     .bottom-text {
@@ -314,7 +317,7 @@ body {
       text-shadow: 2px 2px 5px rgb(255, 255, 255);
       font-family: 'Permanent Marker', cursive;
       /*font-family: sans-serif;*/
-      font-size: 15px;
+      font-size: 13px;
       font-weight: 400;
     }
   
